tests/e2e/closing_parenthesis2_error.error
Error: syntax error in story at line 1, column 10

1|    a = [1, 2
               ^

E0076: Unexpected end of line. Maybe close a `}` or `]` expression?
